--- a/Custom.css
+++ b/Custom.css
@@ -32,6 +32,16 @@
     border-left: 4px solid blue;
     background-color:lightgrey;
 }
+#boxTitle{
+    background-color: rgba(0,0,0,0.6);
+    color:white;
+    padding:0;
+    border: 4px solid white;
+}
+.titleBackground{
+    background-image: url(Images/mainBackground.jpeg);
+    background-size: cover;
+}
 #projTitle{
     border-bottom-style:solid;
     border-top-style:solid;
