--- a/Custom.css
+++ b/Custom.css
@@ -1,3 +1,99 @@
+/* ---------NEW---------- */
+
+/* -------UNIVERSAL-------*/
+.whiteText{
+    color:rgba(255,255,255,1);
+}
+
+.noBottomMargin{
+    margin-bottom: 0;
+}
+.noTopMargin{
+    margin-top:0;
+}
+
+.homeNavbar{
+    color:black;
+    background-color: rgba(240,248,255,0.5);
+    padding-left:5vw;
+}
+
+.scrollNavbar{
+    color:black;
+    background-color: rgba(255,255,255,1);
+    padding-left: 5vw;
+}
+
+.navbarMargin{
+    margin-right:5vw;
+}
+
+.black{
+    color:black;
+}
+
+.whiteBackground{
+    background-color: white;
+}
+
+.marker{
+    font-family: 'Permanent Marker', cursive;
+}
+/* HOME */
+.fullscreen{
+    padding-top: 7vh;
+    padding-bottom: 20vh;
+}
+
+.mountainBackground{
+    background-image: url(Images/mountains.jpg);
+    background-size: cover;
+}
+
+.indexIcon{
+    margin-top: 15vh;
+    padding-top:0.8em;
+    padding-bottom: 1em;
+    margin-left:3.7rem;
+    margin-right: 3.7rem;
+    background-color: rgba(255,255,255,0.6)
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* OLD */
+.footResumeRRR{
+    margin-top:1.5em;
+}
+
+.sameLine{
+    display: inline;
+}
+#largerText{
+    font-size:3em;
+}
+/* END UNIVERSAL*/
+
+/* ABOUT_ME.html*/
+
+.bottomPadding{
+  padding-bottom: 2em;
+}
+
+/* END ABOUT_ME.html */
+
+
 .imgKhan{
     margin-top: 55px;
     }
@@ -20,39 +116,19 @@
 .ulSize{
     font-size:1.5em;
     }
-.mainTitleRRR{
-    margin-top:2.4em;
-    margin-bottom:1.5em;
-}
-.footResumeRRR{
-    margin-top:1.5em;
-}
+
+
 .resumeTitlesRRR{
     padding-left:5px;
     border-left: 4px solid blue;
     background-color:lightgrey;
 }
-#boxTitle{
-    background-color: rgba(0,0,0,0.6);
-    color:white;
-    padding:0;
-    border: 4px solid white;
-}
-.titleBackground{
-    background-image: url(Images/mainBackground.jpeg);
-    background-size: cover;
-}
+
+
+
 #projTitle{
     border-bottom-style:solid;
     border-top-style:solid;
     border-bottom-color:orange;
     border-top-color:orange;
-}
-#greyBackground{
-    background-color:lightgrey;
-}
-#footer{
-    background-color:lightgrey;
-    padding-bottom:0;
-    padding-top:0;
 }
