--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,81 @@
 
 
 html{
-  background-color: #EFEFEF;
+  background-color: #000000;
 }
 
 body{
-  background-color: #EFEFEF;
+  background-color: #000000;
+}
+
+
+/* Navbar - Overlay */
+
+.container-icon {
+  display: inline-block;
+  cursor: pointer;
+  background-color: #00000;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #B82601;
+  margin: 6px 0;
+}
+
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.85);
+  overflow-x: hidden;
+  transition: 0.5s;
+  z-index: 2;
+}
+
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+  z-index:2;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: white;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #B82601;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+  color: #B82601;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+  font-size: 40px;
+  top: 15px;
+  right: 35px;
+  }
 }
 
 
@@ -24,31 +94,15 @@ header{
   /*
   charcoal: #373737
   void: #0E0B16
+  nice white: #EFEFEF
   */
   background-size: cover;
   margin-bottom: 30px;
   font-size: 3em;
+  z-index: 1;
 }
 
 .mainTitle{
-  /*
-  height: 1.2em;
-  width: 100vw;
-
-  margin: 0;
-  padding: 0;
-  
-  margin-left: 5vw;
-  padding-left: 5vw;
-  margin-top:10vh;
-  border-left: 20px solid black;
-  
-  border-left: 5px solid #B82601;
-  border-right: 5px solid #B82601;
-  border-top: 5px solid #B82601;
-  border-bottom: 5px solid #B82601;
-  
-  */
   color: #B82601;
   font-size: 4em;
   font-family: "Monoton", cursive;
@@ -64,6 +118,7 @@ header{
 
 .title{
   font-size: 3.5vw;
+  color: white;
   padding-left: .6em;
   border-left: 20px solid #B82601;
 }
@@ -71,4 +126,5 @@ header{
 .paragraph{
   font-size: 1.7vw;
   margin-left: 1.7em;
+  color: white;
 }
