--- a/css/main.css
+++ b/css/main.css
@@ -282,22 +282,61 @@ footer a:hover{
   padding-left: .6em;
   margin:0;
   margin-top: 5vh;
+  padding-bottom: 40vh;
 }
 
 
 /* Projects Page */
 
-.projContainer img {
-  width: 40vw;
+.projContainer{
+  margin-top: 5vh;
+  padding: 20px;
+  border-radius: 35px;
+  border: 5px white solid;
+}
+
+.projContainer img{
+  width: fill;
   height: auto;
   border-radius: 35px;
+  padding: 0;
+  margin: 0;
+}
+
+#left{
+  
+  border-right: 10px solid white;
+}
+
+#right{
+  border-left: 10px solid white;
+}
+
+/*
+.projContainer img {
+  width: fill;
+  height: auto;
+  border-radius: 35px;
+  padding-left: 0;
+  margin-left: 0;
+}
+
+@media screen and (max-width: 450px) {
+  .projContainer img {
+    width: 80vw;
+    height: auto;
+    border-radius: 35px;
+  }
 }
 
 .projContainer{
-  border-bottom: solid rgba(256,256,256,0.2) 5px;
   margin-top: 5vh;
-  padding-bottom: 5vh;
+  padding: 20px;
+  border-radius: 35px;
+  border: 5px white solid;
 }
+
+*/
 
 /*
 <---General-Info--->
