--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,65 @@
+/* Landing */
+#landing{
+  margin-top: 10vh;
+}
+
+.landing-text{
+  padding-left: 2vw;
+}
+
 
 /* Link */
-
 .generallink {
-  color: #fff;
+  color: black;
   text-decoration: none;
-  border-bottom: 3px solid #fff;
+  border-bottom: 3px solid black;
   -moz-transition: all cubic-bezier(0.2, 1, 0.2, 1) 0.4s;
   -webkit-transition: all cubic-bezier(0.2, 1, 0.2, 1) 0.4s;
   transition: all cubic-bezier(0.2, 1, 0.2, 1) 0.4s;
 }
 
 .generallink:hover {
-  color: #fff;
+  color: black;
   text-decoration: none;
   border-bottom: 3px solid transparent;
   -moz-transition: all cubic-bezier(0.2, 1, 0.2, 1) 0.4s;
   -webkit-transition: all cubic-bezier(0.2, 1, 0.2, 1) 0.4s;
   transition: all cubic-bezier(0.2, 1, 0.2, 1) 0.4s;
+}
+
+/* General */
+.blue_background{
+  background-color: #0099ff;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.white-text{
+  color: white;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+/* Specific Stuff */
+#blue_wave{
+  margin-bottom: -8px;
+}
+
+#blue_wave_bottom{
+  margin-top: -22px;
+}
+
+#contact_tab{
+  margin-bottom: 10vh;
+}
+
+#resume_tab{
+  margin-bottom: 3vh;
+}
+
+center{
+  margin-bottom: 10vh;
+
 }
