--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,20 @@ html{
   scroll-behavior: smooth;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(73, 182, 255); 
+}
 
 
 /* Projects */
