--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,15 @@
   margin-top: 5vh;
 }
 
+@media only screen and (min-width: 760px) {
+
+  #landing{
+    margin-top: 15vh;
+  }
+}
+
+
+
 .landing-text{
   padding-left: 2vw;
 }
@@ -50,6 +59,7 @@
 
 html{
   scroll-behavior: smooth;
+  font-size: 80%;
 }
 
 /* width */
